...
                android:id="@+id/task_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ActionBar">

                <ImageButton
                    android:id="@+id/edit_done_button_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@null"
                    android:contentDescription="@string/done_task_description"
                    android:paddingEnd="10dp"
...
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="normal"
                    android:theme="@style/ActionBar" />

                <EditText
                    android:id="@+id/title_task"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_title"
                    android:inputType="textPersonName|textCapSentences"
...
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <Button
                                android:id="@+id/pick_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:onClick="showDatePickerDialog"
                                android:text="@string/enter_due_date_hint" />

...
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <Spinner
                                android:id="@+id/durationSpinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:spinnerMode="dialog" />

                        </ViewSwitcher>
...
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:orientation="horizontal"
                                android:spinnerMode="dialog">

                                <RadioButton
                                    android:id="@+id/energy_low"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="onRadioButtonClicked"
                                    android:text="@string/low_energy" />

                                <RadioButton
                                    android:id="@+id/energy_normal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="false"
                                    android:onClick="onRadioButtonClicked"
                                    android:text="@string/normal_energy" />

                                <RadioButton
                                    android:id="@+id/energy_high"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="onRadioButtonClicked"
                                    android:text="@string/high_energy" />
                            </RadioGroup>

...
