...

    <!-- Maximum lengths -->
    <string name="max_length_title">35</string>
    <string name="max_length_description">1000</string>

    <!-- Error messages -->
    <string name="error_title_empty">The title can not be empty !</string>
    <string name="error_title_duplicated">This title is already taken !</string>
    <string name="error_title_contains_contributors_separator">"You cannot enter a title containing "</string>
    <string name="error_location_name_empty">The location name can not be empty !</string>
    <string name="error_location_name_duplicated">You can\'t use the same name for 2 locations !</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="error_authentication_canceled">Authentication canceled.</string>
    <string name="error_valid_title_firebase">Title cannot contain . # $ [ ]</string>
...

    <string name="unfilled_duration">Not decided yet</string>
    <string name="unfilled_location">Not decided yet</string>


    <!-- Energy description -->
    <string name="description_remaining_days">represent the remaining days</string>
    <string name="elsewhere_location">Elsewhere</string>


    <!-- Notification -->
    <string name="notification_content_task">\'s due date is close !</string>
    <string name="notification_detail_date">"Due date: "</string>
...
